[package]
name = "find_region"
version = "0.1.0"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
env_logger = "0.7"
iron = "0.6"
log = "0.4"
mount = "0.4"
postgres = "0.17"
router = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
staticfile = "0.5"
structopt = "0.3"
time = "0.2"
